--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
             	<div class="header">            
              	 <ul>
                	 <li> <a class="extra" href="index.html">About Me</a> </li>
-               	 <li><a class="extra" href="http://io-oi.org">The Blog</a></li>
-             	 <li><a class="extra" href="havefun.html">Quod Est Vitae?</a></li>                
+               	 <li><a class="extra" href="http://proj.html">Projects</a></li>
+             	 <li><a class="extra" href="http://io-oi.org">The Blog</a></li>                
              	 </ul>
             	</div>
            
@@ -58,7 +58,7 @@ V23c0-1.104,0.896-2,2-2h28c1.104,0,2,0.896,2,2V41z"/></g></svg>
       <path style="fill:#010002;" d="M243.196,0C108.891,0,0,108.891,0,243.196s108.891,243.196,243.196,243.196s243.196-108.891,243.196-243.196C486.392,108.861,377.501,0,243.196,0z M182.397,360.994h-60.799V148.197h60.799V360.994zM153.882,135.156c-15.747,0-28.484-12.768-28.484-28.515s12.768-28.515,28.484-28.515c15.747,0.03,28.515,12.798,28.515,28.515 C182.397,122.388,169.629,135.156,153.882,135.156z M395.193,360.994h-60.799V229.425c0-15.413-4.408-26.204-23.347-26.204c-31.403,0-37.452,26.204-37.452,26.204v131.569h-60.799V148.197h60.799v20.337c8.694-6.657,30.399-20.307,60.799-20.307c19.699,0,60.799,11.795,60.799,83.051V360.994z"/></g></svg>
       </a>
 &nbsp &nbsp
-    <a href="pdfs/cv.pdf">
+    <a href="cv.html">
 <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
    width="30px" height="30px" viewBox="0 0 40 40" style="enable-background:new 0 0 40 40;" xml:space="preserve">
 <style type="text/css">
@@ -146,9 +146,9 @@ V23c0-1.104,0.896-2,2-2h28c1.104,0,2,0.896,2,2V41z"/></g></svg>
 
 		<h2 id="bio">Bio Blurb</h2>
 
-		<p>I spent my boyhood in <a href="http://en.wikipedia.org/wiki/Wuhan">Wuhan</a>, a punk metropolis in central China. But illumination seldom comes to my rescue and all the time seems lost in history before I moved to <a href="http://en.wikipedia.org/wiki/Beijing">Beijing</a> in 2011. However, my enthusiasm for exploring life in the capital faded after I received my Bachelors degrees in Information Systems and Economics from <a href="http://english.pku.edu.cn/">Peking University</a>, both in 2015. From the very beginning, my research interest has been about <a href="https://en.wikipedia.org/wiki/Natural_language_processing">NLP</a>, <a href="http://sentic.net/affective-computing-and-sentiment-analysis.pdf">Sentiment Analysis</a> and Cognitive Science. I was lucky to have <a href="http://ocean.pku.edu.cn/english/subpage.asp?id=317">Prof. Yang Xu</a> and <a href="http://www.researchgate.net/researcher/11040904_Win-Bin_Huang">Dr. Win-Bin Huang</a> helped me out of many pitfalls that could sabo a neophyte.</p>
+		<p>I spent my boyhood in <a href="http://en.wikipedia.org/wiki/Wuhan">Wuhan</a>, a punk metropolis in central China. But illumination seldom comes to my rescue, and all the time seems lost in history before I moved to <a href="http://en.wikipedia.org/wiki/Beijing">Beijing</a> in 2011. However, my enthusiasm for exploring life in the capital city faded after I received my Bachelors degrees in Information Systems and Economics from <a href="http://english.pku.edu.cn/">Peking University</a>, both in 2015. From the very beginning, my research interest has been about <a href="https://en.wikipedia.org/wiki/Natural_language_processing">NLP</a>, <a href="http://sentic.net/affective-computing-and-sentiment-analysis.pdf">Sentiment Analysis</a> and Artificial Intelligence. I was lucky to have <a href="http://ocean.pku.edu.cn/english/subpage.asp?id=317">Prof. Yang Xu</a> and <a href="http://www.im.pku.edu.cn/pku/huangwenbin/2015-09-11/324.html">Prof. Win-Bin Huang</a> helped me out of many pitfalls that could sabo a neophyte.</p>
 
-            <p>These days I research actively in the <a href="http://sentic.net/team/">Sentic Team</a> with the insightful <a href="http://research.ntu.edu.sg/expertise/academicprofile/Pages/StaffProfile.aspx?ST_EMAILID=CAMBRIA">Prof. Erik Cambria</a>, not suprisingly conducting research on <a href="http://en.wikipedia.org/wiki/Natual_language_based _forecasting">Natural Language Based Forecasting</a> and <a href="https://en.wikipedia.org/wiki/Computational_finance">Computational Finance</a>.
+            <p>These days I research actively in the <a href="http://sentic.net/team/">Sentic Team</a> with the insightful <a href="http://research.ntu.edu.sg/expertise/academicprofile/Pages/StaffProfile.aspx?ST_EMAILID=CAMBRIA">Prof. Erik Cambria</a>, not suprisingly conducting research on <a href="http://sentic.net/projects/#natural-language-based-financial-forecasting">Natural Language based Financial Forecasting</a>, which is at the intersection of NLP techniques and <a href="https://en.wikipedia.org/wiki/Computational_finance">Computational Finance</a>. Check the <a href="proj.html">projects</a> to find out more!
 
             <br />
                   
