--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             	<div class="header">            
              	 <ul>
                	 <li> <a class="extra" href="index.html">About Me</a> </li>
-               	 <li><a class="extra" href="proj.html">Projects</a></li>
+               	 <li><a class="extra" href="phttps://fxing79.github.io/proj.html">Projects</a></li>
              	 <li><a class="extra" href="http://io-oi.org">The Blog</a></li>                
              	 </ul>
             	</div>
