--- a/cv.html
+++ b/cv.html
@@ -19,7 +19,7 @@
                 <div class="header">            
                  <ul>
                  <li> <a class="extra" href="index.html">About Me</a> </li>
-                 <li><a class="extra" href="proj.html">Projects</a></li>
+                 <li><a class="extra" href="https://fxing79.github.io/proj.html">Projects</a></li>
                  <li><a class="extra" href="http://io-oi.org">The Blog</a></li>                
                  </ul>
                 </div>
