--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
  		
  		<h1 id="name">Frank Z. Xing</h1>
 
-			<p>('邢竹天' for Chinese or 'ɕɪːn˩˨ zɒʊ˩˨ tʰɪen˧' for IPA)</p>
+			<p>(Chinese: '邢竹天'	IPA: 'ɕɪːn˩˨ zɒʊ˩˨ tʰɪen˧')</p>
                   <p><img class="profilepic" src="images/happyicon-300*300.png" /></p>
 			<p><strong>Ph.D. Candidate</strong><br />
 			CIL.SCSE.NTU.SG <br />
