--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@ V23c0-1.104,0.896-2,2-2h28c1.104,0,2,0.896,2,2V41z"/></g></svg>
                     <p>The fast spread of information across social media have made managing global assets increasingly risky and challenging. Previous asset allocation methods mainly relied on the experience of financial experts, but ignored public opinions. Inspired by the idea of collective intelligence, this project leverages on sentic computing to monitor public moods, and further fuses the asset pricing model. Simulations suggest iBAA to be a powerful approach to investments.</p>
                     <ul style="list-style-type:square">
                       <li>Xing, F. Z.; Cambria, E.; Welsch, R. E. <a href="http://sentic.net/market-sentiment-views.pdf">Intelligent Bayesian Asset Allocation via Market Sentiment Views</a>. <i>IEEE Computational Intelligence Magazine</i>, Forthcoming.</li>
-                      <li>Xing, F. Z.; Cambria, E.; Malandri, L.; Vercellis, C. <a href="https://arxiv.org/pdf/1802.09911.pdf">Discovering Bayesian Market Views for Intelligent Asset Allocation</a>. <i>Under review</i>.</li>
+                      <li>Xing, F. Z.; Cambria, E.; Malandri, L.; Vercellis, C. <a href="https://arxiv.org/pdf/1802.09911.pdf">Discovering Bayesian Market Views for Intelligent Asset Allocation</a>. <i>ECML-PKDD 2018</i>.</li>
                     </ul>
                 </div>
                 <div class="item">
