--- a/index.html
+++ b/index.html
@@ -150,15 +150,15 @@ V23c0-1.104,0.896-2,2-2h28c1.104,0,2,0.896,2,2V41z"/></g></svg>
 
             <h2 id="bio">Projects</h2>
 
-                            <p>Only active projects are described here. For a full publication list see <a href="http://dblp.uni-trier.de/pers/hd/x/Xing:Frank_Z=">DBLP</a>.</p>
+                            <p>Only active projects are described here. For a full list of publications see <a href="http://dblp.uni-trier.de/pers/hd/x/Xing:Frank_Z=">DBLP</a>.</p>
 
                 <div class="item">
                     <h3>Intelligent Bayesian Asset Allocation</h3>
                     <img src="images/mktvw.png" style="float:left; margin: 0em 1em 0em 0em;" width="140px" height="140px"/>
                     <p>The fast spread of information across social media have made managing global assets increasingly risky and challenging. Previous asset allocation methods mainly relied on the experience of financial experts, but ignored public opinions. Inspired by the idea of collective intelligence, this project leverages on sentic computing to monitor public moods, and further fuses the asset pricing model. Simulations suggest iBAA to be a powerful approach to investments.</p>
                     <ul style="list-style-type:square">
-                      <li>Xing, F. Z.; Cambria, E.; Welsch, R. E. <a href="http://sentic.net/market-sentiment-views.pdf">Intelligent Bayesian Asset Allocation via Market Sentiment Views</a>. <i>IEEE Computational Intelligence Magazine</i>, Forthcoming.</li>
-                      <li>Xing, F. Z.; Cambria, E.; Malandri, L.; Vercellis, C. <a href="https://arxiv.org/pdf/1802.09911.pdf">Discovering Bayesian Market Views for Intelligent Asset Allocation</a>. <i>ECML-PKDD 2018</i>.</li>
+                      <li>Xing, F. Z.; Cambria, E.; Welsch, R. E. (2018). <a href="http://sentic.net/market-sentiment-views.pdf">Intelligent Bayesian Asset Allocation via Market Sentiment Views</a>. <i>IEEE Computational Intelligence Magazine</i> 13(4) pp 25-34.</li>
+                      <li>Xing, F. Z.; Cambria, E.; Malandri, L.; Vercellis, C. (2018). <a href="https://arxiv.org/pdf/1802.09911.pdf">Discovering Bayesian Market Views for Intelligent Asset Allocation</a>. <i>ECML-PKDD</i>. <a href="http://github.com/fxing79/ibaa">[data]</a></li>
                     </ul>
                 </div>
                 <div class="item">
@@ -174,8 +174,8 @@ V23c0-1.104,0.896-2,2-2h28c1.104,0,2,0.896,2,2V41z"/></g></svg>
                     <img src="images/dalft.png" style="float:left; margin: 0em 1em 0em 0em;" width="140px" height="140px"/>
                     <p>Language in financial domain is characterized by its frequent use of terminologies and commonsense knowledge. Numbers, time expressions, and arguments, which are trivial in general domain without context play an important role in understanding financial texts. This project combines the top-down ontology construction approach and bottom-up machine learning techniques to build a knowledge base for financial analysis and reasoning.</p>
                       <ul style="list-style-type:square">
-                      <li>Xing, F. Z.; Pallucchini, F.; Cambria, E. Cognitive-Inspired Adaptation of Sentiment Lexicons. <i>Under review</i>.</li>
-                      <li>Xing, F. Z.; Cambria, E.; Welsch, R. E. <a href="https://link.springer.com/article/10.1007/s10462-017-9588-9">Natural Language based Financial Forecasting: A Survey</a>. <i>Artificial Intelligence Review</i> 50(1) pp 49–73.</li>
+                      <li>Xing, F. Z.; Pallucchini, F.; Cambria, E. Cognitive-Inspired Domain Adaptation of Sentiment Lexicons. <i>Information Processing & Management</i>, Forthcoming. <a href="http://github.com/fxing79/Cognitive-inspired-domain-adaptation">[code]</a></li>
+                      <li>Xing, F. Z.; Cambria, E.; Welsch, R. E. (2018). <a href="https://link.springer.com/article/10.1007/s10462-017-9588-9">Natural Language based Financial Forecasting: A Survey</a>. <i>Artificial Intelligence Review</i> 50(1) pp 49–73.</li>
                     </ul>
                 </div>
 
