--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@ function collapse(divid) {
             
             	<div class="contents">
  		
- 		<h1 id="name">Frank Xing</h1>
+ 		<h1 id="name">Frank Xing, PhD</h1>
     <hr>
 
       <p><img class="profilepic" src="images/happyicon-300*300.png" /></p>
-			<p><strong>Ph.D. Candidate @ <a href="http://www.ntu.edu.sg/Pages/home.aspx">NTU</a></strong><br />
+			<p><br />
       <br />
 
 
@@ -122,9 +122,9 @@ V23c0-1.104,0.896-2,2-2h28c1.104,0,2,0.896,2,2V41z"/></g></svg>
 
 		<h2 id="bio">Bio</h2>
 
-		<p>※ I spent my boyhood in <a href="http://en.wikipedia.org/wiki/Wuhan">Wuhan</a>, a punk metropolis in central China. But illumination seldom comes to my rescue and all the time seems lost in history before I moved to <a href="http://en.wikipedia.org/wiki/Beijing">Beijing</a> in 2011. However, my enthusiasm for exploring life in the ancient capital faded after I received my bachelor's degrees in Information Systems and Economics from <a href="http://english.pku.edu.cn/">Peking University</a>. </br></br>
+		<p>※ I spent my boyhood in <a href="http://en.wikipedia.org/wiki/Wuhan">Wuhan</a>, a punk metropolis in central China. But illumination seldom comes to my rescue and all the time seems lost in history before I moved to <a href="http://en.wikipedia.org/wiki/Beijing">Beijing</a> in 2011. However, my enthusiasm for exploring life in the ancient capital faded after I received my bachelor's degrees in Information Systems and Economics from <a href="http://english.pku.edu.cn/">Peking University</a>. So I drifted to Singapore and did my PhD at <a href="http://http://scse.ntu.edu.sg/Pages/Home.aspx">Nanyang Technological University</a>, co-advised by Prof. <a href="http://research.ntu.edu.sg/expertise/academicprofile/Pages/StaffProfile.aspx?ST_EMAILID=CAMBRIA&print=1">Erik Cambria</a> and Prof. <a href="http://mitsloan.mit.edu/faculty-and-research/faculty-directory/detail/?id=41041">Roy Welsch</a>.</br></br>
 
-    From the inception, my research interest has been about <a href="https://en.wikipedia.org/wiki/Natural_language_processing">NLP</a>, <a href="http://sentic.net/affective-computing-and-sentiment-analysis.pdf">Sentiment Analysis</a> and <a href="https://en.wikipedia.org/wiki/Business_intelligence">Business Intelligence</a>. I was lucky to have Prof. <a href="http://www.im.pku.edu.cn/portal/teacher.do?tid=36">Yang Xu</a> and Dr. Win-Bin Huang helped me out of many pitfalls that could sabo a neophyte. These days I research actively on <a href="http://sentic.net/natural-language-based-financial-forecasting.pdf">the intersection of NLP and its financial applications</a>. I am co-advised by Prof. <a href="http://research.ntu.edu.sg/expertise/academicprofile/Pages/StaffProfile.aspx?ST_EMAILID=CAMBRIA&print=1">Erik Cambria</a> and Prof. <a href="http://mitsloan.mit.edu/faculty-and-research/faculty-directory/detail/?id=41041">Roy Welsch</a>. </p>
+    My research interest spans <a href="https://en.wikipedia.org/wiki/Natural_language_processing">NLP</a>, <a href="http://web.stanford.edu/~jurafsky/slp3/4.pdf">Sentiment Analysis</a>, <a href="https://en.wikipedia.org/wiki/Business_intelligence">Business Intelligence</a>, and <a href="http://sentic.net/natural-language-based-financial-forecasting.pdf">AI empowered finance</a>.</p>
 
             <p onclick="collapse('ag')">※ Academic genealogy, a.k.a. how you do research [expand].<br />
                         <ul class="domtree" id="ag" style="display: none">
@@ -159,6 +159,7 @@ V23c0-1.104,0.896-2,2-2h28c1.104,0,2,0.896,2,2V41z"/></g></svg>
                     <ul style="list-style-type:square">
                       <li>Xing, F. Z.; Cambria, E.; Welsch, R. E. (2018). <a href="http://sentic.net/market-sentiment-views.pdf">Intelligent Bayesian Asset Allocation via Market Sentiment Views</a>. <i>IEEE Computational Intelligence Magazine</i> 13(4) pp 25-34.</li>
                       <li>Xing, F. Z.; Cambria, E.; Malandri, L.; Vercellis, C. (2018). <a href="https://arxiv.org/pdf/1802.09911.pdf">Discovering Bayesian Market Views for Intelligent Asset Allocation</a>. <i>ECML-PKDD</i>. <a href="http://github.com/fxing79/ibaa">[data]</a></li>
+		      <li>Malandri, L; Xing, F. Z.; Orsenigo, C.; Vercellis, C.; Cambria, E. (2018). Public Mood Driven Asset Allocation: The Importance of Financial Sentiment in Portfolio Management. <i>Cognitive Computation</i>, Forthcoming.</li>
                     </ul>
                 </div>
                 <div class="item">
@@ -174,13 +175,13 @@ V23c0-1.104,0.896-2,2-2h28c1.104,0,2,0.896,2,2V41z"/></g></svg>
                     <img src="images/dalft.png" style="float:left; margin: 0em 1em 0em 0em;" width="140px" height="140px"/>
                     <p>Language in financial domain is characterized by its frequent use of terminologies and commonsense knowledge. Numbers, time expressions, and arguments, which are trivial in general domain without context play an important role in understanding financial texts. This project combines the top-down ontology construction approach and bottom-up machine learning techniques to build a knowledge base for financial analysis and reasoning.</p>
                       <ul style="list-style-type:square">
-                      <li>Xing, F. Z.; Pallucchini, F.; Cambria, E. Cognitive-Inspired Domain Adaptation of Sentiment Lexicons. <i>Information Processing & Management</i>, Forthcoming. <a href="http://github.com/fxing79/Cognitive-inspired-domain-adaptation">[code]</a></li>
+                      <li>Xing, F. Z.; Pallucchini, F.; Cambria, E. (2018). Cognitive-Inspired Domain Adaptation of Sentiment Lexicons. <i>Information Processing & Management</i>, Forthcoming. <a href="http://github.com/fxing79/Cognitive-inspired-domain-adaptation">[code]</a></li>
                       <li>Xing, F. Z.; Cambria, E.; Welsch, R. E. (2018). <a href="https://link.springer.com/article/10.1007/s10462-017-9588-9">Natural Language based Financial Forecasting: A Survey</a>. <i>Artificial Intelligence Review</i> 50(1) pp 49–73.</li>
                     </ul>
                 </div>
 
                   <div class="footer">
-                  &copy; Frank Xing*, a linguistic maverick&nbsp &nbsp*OR, a clarinettist.<br />
+                  &copy; Frank Xing, also a clarinettist.<br />
                   <!--visitors-->
                   <a href="http://info.flagcounter.com/QLtL"><img src="http://s09.flagcounter.com/map/QLtL/size_t/txt_000000/border_000000/pageviews_0/viewers_Visitors/flags_0/" alt="Flag Counter" border="0"></a>
                   </div>
