--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@ V23c0-1.104,0.896-2,2-2h28c1.104,0,2,0.896,2,2V41z"/></g></svg>
                     <ul style="list-style-type:square">
                       <li>Xing, F. Z.; Cambria, E.; Welsch, R. E. (2018). <a href="http://sentic.net/market-sentiment-views.pdf">Intelligent Bayesian Asset Allocation via Market Sentiment Views</a>. <i>IEEE Computational Intelligence Magazine</i> 13(4) pp 25-34.</li>
                       <li>Xing, F. Z.; Cambria, E.; Malandri, L.; Vercellis, C. (2018). <a href="https://arxiv.org/pdf/1802.09911.pdf">Discovering Bayesian Market Views for Intelligent Asset Allocation</a>. <i>ECML-PKDD</i>. <a href="http://github.com/fxing79/ibaa">[data]</a></li>
-		      <li>Malandri, L; Xing, F. Z.; Orsenigo, C.; Vercellis, C.; Cambria, E. (2018). Public Mood Driven Asset Allocation: The Importance of Financial Sentiment in Portfolio Management. <i>Cognitive Computation</i>, Forthcoming.</li>
+		      <li>Malandri, L; Xing, F. Z.; Orsenigo, C.; Vercellis, C.; Cambria, E. (2018). <a href="http://link.springer.com/article/10.1007/s12559-018-9609-2">Public Mood-Driven Asset Allocation: the Importance of Financial Sentiment in Portfolio Management</a>. <i>Cognitive Computation</i>, Forthcoming.</li>
                     </ul>
                 </div>
                 <div class="item">
@@ -167,7 +167,7 @@ V23c0-1.104,0.896-2,2-2h28c1.104,0,2,0.896,2,2V41z"/></g></svg>
                     <img src="images/gsv.png" style="float:left; margin: 0em 1em 0em 0em;" width="140px" height="140px"/>
                     <p>Estimating correlations between different stocks is an indispensable step under the the framework of modern portfolio theory. While the correlations induced from price data are unreliable, especially in high-dimensional space. This project seeks other sources of information, especially using NLP techniques, to facilitate robust and large-scale modeling of the dependence structure. The methods developed have great applicational potential for risk management.</p>
                      <ul style="list-style-type:square">
-                      <li>Xing, F. Z.; Cambria, E.; Welsch, R. E. <a href="http://papers.ssrn.com/abstract_id=3275132">Growing Semantic Vines for Robust Asset Allocation</a>, <i>Under revision</i>. <a href="http://github.com/fxing79/semantic_vine_growing">[code]</a></li>
+                      <li>Xing, F. Z.; Cambria, E.; Welsch, R. E. <a href="http://papers.ssrn.com/abstract_id=3275132">Growing Semantic Vines for Robust Asset Allocation</a>, <i>Knowledge-Based Systems</i>, Forthcoming. <a href="http://github.com/senticnet/semantic-vine-growing">[code]</a></li>
                     </ul>
                 </div>
                   <div class="item">
@@ -175,7 +175,7 @@ V23c0-1.104,0.896-2,2-2h28c1.104,0,2,0.896,2,2V41z"/></g></svg>
                     <img src="images/dalft.png" style="float:left; margin: 0em 1em 0em 0em;" width="140px" height="140px"/>
                     <p>Language in financial domain is characterized by its frequent use of terminologies and commonsense knowledge. Numbers, time expressions, and arguments, which are trivial in general domain without context play an important role in understanding financial texts. This project combines the top-down ontology construction approach and bottom-up machine learning techniques to build a knowledge base for financial analysis and reasoning.</p>
                       <ul style="list-style-type:square">
-                      <li>Xing, F. Z.; Pallucchini, F.; Cambria, E. (2018). Cognitive-Inspired Domain Adaptation of Sentiment Lexicons. <i>Information Processing & Management</i>, Forthcoming. <a href="http://github.com/fxing79/Cognitive-inspired-domain-adaptation">[code]</a></li>
+                      <li>Xing, F. Z.; Pallucchini, F.; Cambria, E. (2018). <a href="http://">Cognitive-Inspired Domain Adaptation of Sentiment Lexicons</a>. <i>Information Processing & Management</i>, Forthcoming. <a href="http://github.com/fxing79/Cognitive-inspired-domain-adaptation">[code]</a></li>
                       <li>Xing, F. Z.; Cambria, E.; Welsch, R. E. (2018). <a href="https://link.springer.com/article/10.1007/s10462-017-9588-9">Natural Language based Financial Forecasting: A Survey</a>. <i>Artificial Intelligence Review</i> 50(1) pp 49–73.</li>
                     </ul>
                 </div>
