--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@ V23c0-1.104,0.896-2,2-2h28c1.104,0,2,0.896,2,2V41z"/></g></svg>
                     <ul style="list-style-type:square">
                       <li>Xing, F. Z.; Cambria, E.; Welsch, R. E. (2018). <a href="http://sentic.net/market-sentiment-views.pdf">Intelligent Bayesian Asset Allocation via Market Sentiment Views</a>. <i>IEEE Computational Intelligence Magazine</i> 13(4) pp 25-34.</li>
                       <li>Xing, F. Z.; Cambria, E.; Malandri, L.; Vercellis, C. (2018). <a href="https://arxiv.org/pdf/1802.09911.pdf">Discovering Bayesian Market Views for Intelligent Asset Allocation</a>. <i>ECML-PKDD</i>. <a href="http://github.com/fxing79/ibaa">[data]</a></li>
-		      <li>Malandri, L; Xing, F. Z.; Orsenigo, C.; Vercellis, C.; Cambria, E. (2018). <a href="http://link.springer.com/article/10.1007/s12559-018-9609-2">Public Mood-Driven Asset Allocation: the Importance of Financial Sentiment in Portfolio Management</a>. <i>Cognitive Computation</i>, Forthcoming.</li>
+		      <li>Malandri, L; Xing, F. Z.; Orsenigo, C.; Vercellis, C.; Cambria, E. (2018). <a href="http://link.springer.com/article/10.1007/s12559-018-9609-2">Public Mood-Driven Asset Allocation: the Importance of Financial Sentiment in Portfolio Management</a>. <i>Cognitive Computation</i> 10(6) pp 1167–1176.</li>
                     </ul>
                 </div>
                 <div class="item">
