--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@ V23c0-1.104,0.896-2,2-2h28c1.104,0,2,0.896,2,2V41z"/></g></svg>
                     <img src="images/gsv.png" style="float:left; margin: 0em 1em 0em 0em;" width="140px" height="140px"/>
                     <p>Estimating correlations between different stocks is an indispensable step under the the framework of modern portfolio theory. While the correlations induced from price data are unreliable, especially in high-dimensional space. This project seeks other sources of information, especially using NLP techniques, to facilitate robust and large-scale modeling of the dependence structure. The methods developed have great applicational potential for risk management.</p>
                      <ul style="list-style-type:square">
-                      <li>Xing, F. Z.; Cambria, E.; Welsch, R. E. <a href="http://papers.ssrn.com/abstract_id=3275132">Growing Semantic Vines for Robust Asset Allocation</a>, <i>Knowledge-Based Systems</i>, Forthcoming. <a href="http://github.com/senticnet/semantic-vine-growing">[code]</a></li>
+                      <li>Xing, F. Z.; Cambria, E.; Welsch, R. E. (2019). <a href="http://www.sciencedirect.com/science/article/abs/pii/S0950705118305872">Growing Semantic Vines for Robust Asset Allocation</a>. <i>Knowledge-Based Systems</i> 165 pp 297-305. <a href="http://github.com/senticnet/semantic-vine-growing">[code]</a></li>
                     </ul>
                 </div>
                   <div class="item">
