--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@ V23c0-1.104,0.896-2,2-2h28c1.104,0,2,0.896,2,2V41z"/></g></svg>
                     <img src="images/dalft.png" style="float:left; margin: 0em 1em 0em 0em;" width="140px" height="140px"/>
                     <p>Language in financial domain is characterized by its frequent use of terminologies and commonsense knowledge. Numbers, time expressions, and arguments, which are trivial in general domain without context play an important role in understanding financial texts. This project combines the top-down ontology construction approach and bottom-up machine learning techniques to build a knowledge base for financial analysis and reasoning.</p>
                       <ul style="list-style-type:square">
-                      <li>Xing, F. Z.; Pallucchini, F.; Cambria, E. (2018). <a href="http://">Cognitive-Inspired Domain Adaptation of Sentiment Lexicons</a>. <i>Information Processing & Management</i>, Forthcoming. <a href="http://github.com/fxing79/Cognitive-inspired-domain-adaptation">[code]</a></li>
+                      <li>Xing, F. Z.; Pallucchini, F.; Cambria, E. (2019). <a href="http://doi.org/10.1016/j.ipm.2018.11.002">Cognitive-Inspired Domain Adaptation of Sentiment Lexicons</a>. <i>Information Processing & Management</i> 56(3) pp 554-564. <a href="http://github.com/fxing79/Cognitive-inspired-domain-adaptation">[code]</a></li>
                       <li>Xing, F. Z.; Cambria, E.; Welsch, R. E. (2018). <a href="https://link.springer.com/article/10.1007/s10462-017-9588-9">Natural Language based Financial Forecasting: A Survey</a>. <i>Artificial Intelligence Review</i> 50(1) pp 49–73.</li>
                     </ul>
                 </div>
