--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@ V23c0-1.104,0.896-2,2-2h28c1.104,0,2,0.896,2,2V41z"/></g></svg>
                     <p>Estimating correlations between different stocks is an indispensable step under the the framework of modern portfolio theory. While the correlations induced from price data are unreliable, especially in high-dimensional space. This project seeks other sources of information, especially using NLP techniques, to facilitate robust and large-scale modeling of the dependence structure. The methods developed have great applicational potential for risk management.</p>
                      <ul style="list-style-type:square">
                       <li>Xing, F. Z.; Cambria, E.; Welsch, R. E. (2019). <a href="http://www.sciencedirect.com/science/article/abs/pii/S0950705118305872">Growing Semantic Vines for Robust Asset Allocation</a>. <i>Knowledge-Based Systems</i> 165 pp 297-305. <a href="http://github.com/senticnet/semantic-vine-growing">[code]</a></li>
-		      <li>Bai, H.; Xing, F. Z.; Huang, W.-B. (2019). Business taxonomy construction using concept-level hierarchical clustering. <i>preprint</i></li>
+		      <li>Bai, H.; Xing, F. Z.; Cambria, E.; Huang, W.-B. (2019). <a href="http://aclweb.org/anthology/">Business taxonomy construction using concept-level hierarchical clustering</a>. <i>FinNLP</i>. <a href="http://github.com/SenticNet/neeq-annual-reports/">[data]</a></li>
                     </ul>
                 </div>
                   <div class="item">
