--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@ V23c0-1.104,0.896-2,2-2h28c1.104,0,2,0.896,2,2V41z"/></g></svg>
 
 		<h2 id="bio">Bio</h2>
 
-		<p>※ I spent my boyhood in <a href="http://en.wikipedia.org/wiki/Wuhan">Wuhan</a>, a punk metropolis in central China. But illumination seldom comes to my rescue and all the time seems lost in history before I moved to <a href="http://en.wikipedia.org/wiki/Beijing">Beijing</a> in 2011. However, my enthusiasm for exploring life in the ancient capital faded after I received my bachelor's degrees in Information Systems and Economics from <a href="http://english.pku.edu.cn/">Peking University</a>. So I drifted to Singapore and did my PhD at <a href="http://scse.ntu.edu.sg/Pages/Home.aspx">Nanyang Technological University</a>, co-advised by Prof. <a href="http://research.ntu.edu.sg/expertise/academicprofile/Pages/StaffProfile.aspx?ST_EMAILID=CAMBRIA&print=1">Erik Cambria</a> and Prof. <a href="http://mitsloan.mit.edu/faculty-and-research/faculty-directory/detail/?id=41041">Roy Welsch</a>. Today, I am a Research Fellow of the same university after one-year with <a href="http://www.continental-corporation.com/en">Continental</a> as a machine learning specialist. I am of course, actively looking for faculty positions.</br></br>
+		<p>※ I spent my boyhood in <a href="http://en.wikipedia.org/wiki/Wuhan">Wuhan</a>, a punk metropolis in central China. But illumination seldom comes to my rescue and all the time seems lost in history before I moved to <a href="http://en.wikipedia.org/wiki/Beijing">Beijing</a> in 2011. However, my enthusiasm for exploring life in the ancient capital faded after I received my bachelor's degrees in Information Systems and Economics from <a href="http://english.pku.edu.cn/">Peking University</a>. So I drifted to Singapore and did my PhD at <a href="http://scse.ntu.edu.sg/Pages/Home.aspx">Nanyang Technological University</a>, co-advised by Prof. <a href="http://research.ntu.edu.sg/expertise/academicprofile/Pages/StaffProfile.aspx?ST_EMAILID=CAMBRIA&print=1">Erik Cambria</a> and Prof. <a href="http://mitsloan.mit.edu/faculty-and-research/faculty-directory/detail/?id=41041">Roy Welsch</a>. Today, I am Presidential Postdoctoral Fellow at Nanyang Technological University after one-year with the AIR Lab at <a href="http://www.continental-corporation.com/en">Continental</a>. I am of course, actively looking for a faculty position.</br></br>
 
     My research interest spans <a href="https://en.wikipedia.org/wiki/Natural_language_processing">NLP</a>, <a href="http://web.stanford.edu/~jurafsky/slp3/4.pdf">Sentiment Analysis</a>, <a href="https://en.wikipedia.org/wiki/Business_intelligence">Business Intelligence</a>, and <a href="http://sentic.net/natural-language-based-financial-forecasting.pdf">AI empowered finance</a>.</p>
 
@@ -183,7 +183,7 @@ V23c0-1.104,0.896-2,2-2h28c1.104,0,2,0.896,2,2V41z"/></g></svg>
                 </div>
 
                   <div class="footer">
-                  &copy; Frank Xing, also a clarinettist.<br />
+                  &copy; 2019 Frank Xing, also a clarinettist.<br />
                   <!--visitors-->
                   <a href="http://info.flagcounter.com/QLtL"><img src="http://s09.flagcounter.com/map/QLtL/size_t/txt_000000/border_000000/pageviews_0/viewers_Visitors/flags_0/" alt="Flag Counter" border="0"></a>
                   </div>
