--- a/index.html
+++ b/index.html
@@ -70,6 +70,32 @@ V23c0-1.104,0.896-2,2-2h28c1.104,0,2,0.896,2,2V41z"/></g></svg>
   />
 </svg>
     </a>
+&nbsp &nbsp &nbsp
+      <a href="http://www.researchgate.net/profile/Frank_Xing2/">
+      <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+   viewBox="0 0 486.392 486.392" width="30px" height="30px" style="enable-background:new 0 0 486.392 486.392;" xml:space="preserve">
+<g>
+		<path d="M28.781,32.006h-4.592V45.85h4.051c2.342,0,4.143-0.549,5.404-1.646c1.261-1.098,1.891-2.945,1.891-5.545
+			C35.535,34.225,33.284,32.006,28.781,32.006z"/>
+		<path d="M48.875,0C21.883,0,0,21.883,0,48.875S21.883,97.75,48.875,97.75S97.75,75.867,97.75,48.875S75.867,0,48.875,0z
+			 M47.153,72.867H36.495c-0.502-0.67-0.821-1.443-0.956-2.318c-0.138-0.873-0.229-1.779-0.273-2.721l-0.267-9.207
+			c-0.09-1.883-0.557-3.359-1.401-4.436c-0.845-1.074-2.27-1.613-4.271-1.613h-5.138v20.295h-9.728V24.883h17.967
+			c4.053,0,7.203,1.018,9.456,3.057c2.251,2.039,3.377,5.143,3.377,9.309c0,3.225-0.653,5.857-1.959,7.896
+			c-1.306,2.039-3.332,3.35-6.079,3.934v0.133c1.666,0.226,2.994,0.64,3.985,1.244c0.99,0.604,1.757,1.479,2.296,2.621
+			c0.541,1.143,0.912,2.588,1.114,4.336c0.204,1.746,0.327,3.896,0.372,6.451c0.045,2.553,0.191,4.502,0.439,5.846
+			c0.247,1.347,0.821,2.265,1.723,2.756L47.153,72.867L47.153,72.867z M83.288,72.867h-7.16v-4.434h-0.135
+			c-1.173,1.881-2.578,3.248-4.222,4.098c-1.645,0.852-3.614,1.277-5.91,1.277c-2.971,0-5.393-0.55-7.262-1.646
+			c-1.869-1.098-3.332-2.721-4.389-4.871c-1.061-2.15-1.77-4.807-2.129-7.965c-0.361-3.16-0.54-6.82-0.54-10.988
+			c0-4.033,0.259-7.572,0.776-10.621c0.518-3.045,1.406-5.588,2.668-7.627c1.261-2.037,2.928-3.572,4.998-4.604
+			c2.07-1.029,4.66-1.545,7.768-1.545c5.312,0,9.141,1.309,11.482,3.932c2.342,2.621,3.512,6.373,3.512,11.258h-9.32
+			c0-0.852-0.102-1.76-0.305-2.723c-0.201-0.963-0.529-1.836-0.979-2.621c-0.451-0.783-1.024-1.434-1.723-1.951
+			c-0.697-0.512-1.543-0.771-2.531-0.771c-2.344,0-4.031,1.299-5.066,3.898c-1.036,2.599-1.553,6.9-1.553,12.904
+			c0,2.912,0.09,5.523,0.269,7.83c0.18,2.309,0.509,4.279,0.979,5.914c0.474,1.635,1.148,2.889,2.025,3.764
+			c0.88,0.873,2.016,1.311,3.412,1.311c0.584,0,1.227-0.158,1.924-0.473c0.698-0.311,1.352-0.781,1.959-1.41
+			c0.607-0.627,1.114-1.42,1.52-2.385c0.406-0.963,0.608-2.094,0.608-3.395v-4.906h-6.417v-7.125h15.738L83.288,72.867
+			L83.288,72.867z"/>
+	</g></svg>
+      </a>
 <br />
 <br />
 
@@ -97,6 +123,33 @@ V23c0-1.104,0.896-2,2-2h28c1.104,0,2,0.896,2,2V41z"/></g></svg>
 </svg>
       </a>
 &nbsp &nbsp &nbsp 
+      <a href="http://github.com/fxing79">
+      <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+      viewBox="0 0 30 30" width="30px" height="30px" enable-background="new 0 0 30 30" xml:space="preserve">
+<g>
+	<path d="M409.132,114.573c-19.608-33.596-46.205-60.194-79.798-79.8C295.736,15.166,259.057,5.365,219.271,5.365
+		c-39.781,0-76.472,9.804-110.063,29.408c-33.596,19.605-60.192,46.204-79.8,79.8C9.803,148.168,0,184.854,0,224.63
+		c0,47.78,13.94,90.745,41.827,128.906c27.884,38.164,63.906,64.572,108.063,79.227c5.14,0.954,8.945,0.283,11.419-1.996
+		c2.475-2.282,3.711-5.14,3.711-8.562c0-0.571-0.049-5.708-0.144-15.417c-0.098-9.709-0.144-18.179-0.144-25.406l-6.567,1.136
+		c-4.187,0.767-9.469,1.092-15.846,1c-6.374-0.089-12.991-0.757-19.842-1.999c-6.854-1.231-13.229-4.086-19.13-8.559
+		c-5.898-4.473-10.085-10.328-12.56-17.556l-2.855-6.57c-1.903-4.374-4.899-9.233-8.992-14.559
+		c-4.093-5.331-8.232-8.945-12.419-10.848l-1.999-1.431c-1.332-0.951-2.568-2.098-3.711-3.429c-1.142-1.331-1.997-2.663-2.568-3.997
+		c-0.572-1.335-0.098-2.43,1.427-3.289c1.525-0.859,4.281-1.276,8.28-1.276l5.708,0.853c3.807,0.763,8.516,3.042,14.133,6.851
+		c5.614,3.806,10.229,8.754,13.846,14.842c4.38,7.806,9.657,13.754,15.846,17.847c6.184,4.093,12.419,6.136,18.699,6.136
+		c6.28,0,11.704-0.476,16.274-1.423c4.565-0.952,8.848-2.383,12.847-4.285c1.713-12.758,6.377-22.559,13.988-29.41
+		c-10.848-1.14-20.601-2.857-29.264-5.14c-8.658-2.286-17.605-5.996-26.835-11.14c-9.235-5.137-16.896-11.516-22.985-19.126
+		c-6.09-7.614-11.088-17.61-14.987-29.979c-3.901-12.374-5.852-26.648-5.852-42.826c0-23.035,7.52-42.637,22.557-58.817
+		c-7.044-17.318-6.379-36.732,1.997-58.24c5.52-1.715,13.706-0.428,24.554,3.853c10.85,4.283,18.794,7.952,23.84,10.994
+		c5.046,3.041,9.089,5.618,12.135,7.708c17.705-4.947,35.976-7.421,54.818-7.421s37.117,2.474,54.823,7.421l10.849-6.849
+		c7.419-4.57,16.18-8.758,26.262-12.565c10.088-3.805,17.802-4.853,23.134-3.138c8.562,21.509,9.325,40.922,2.279,58.24
+		c15.036,16.18,22.559,35.787,22.559,58.817c0,16.178-1.958,30.497-5.853,42.966c-3.9,12.471-8.941,22.457-15.125,29.979
+		c-6.191,7.521-13.901,13.85-23.131,18.986c-9.232,5.14-18.182,8.85-26.84,11.136c-8.662,2.286-18.415,4.004-29.263,5.146
+		c9.894,8.562,14.842,22.077,14.842,40.539v60.237c0,3.422,1.19,6.279,3.572,8.562c2.379,2.279,6.136,2.95,11.276,1.995
+		c44.163-14.653,80.185-41.062,108.068-79.226c27.88-38.161,41.825-81.126,41.825-128.906
+		C438.536,184.851,428.728,148.168,409.132,114.573z"/>
+</g></svg>
+      </a>
+&nbsp &nbsp &nbsp
       <a href="http://www.facebook.com/frank.xing.79">
       <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
       viewBox="0 0 30 30" width="30px" height="30px" enable-background="new 0 0 30 30" xml:space="preserve"><circle cx="15" cy="15" r="15"/><path id="f" fill="#FFFFFF" d="M16.4,23.9v-8.1h2.7l0.4-3.2h-3.1v-2c0-0.9,0.3-1.5,1.6-1.5l1.7,0V6.2c-0.3,0-1.3-0.1-2.4-0.1c-2.4,0-4.1,1.5-4.1,4.2v2.3h-2.7v3.2h2.7v8.1H16.4z"/></svg>
@@ -124,12 +177,12 @@ V23c0-1.104,0.896-2,2-2h28c1.104,0,2,0.896,2,2V41z"/></g></svg>
 
 		<p>※ I spent my boyhood in <a href="http://en.wikipedia.org/wiki/Wuhan">Wuhan</a>, a punk metropolis in central China. But illumination seldom comes to my rescue and all the time seems lost in history before I moved to <a href="http://en.wikipedia.org/wiki/Beijing">Beijing</a> in 2011. However, my enthusiasm for exploring life in the ancient capital faded after I received my bachelor's degrees in Information Systems and Economics from <a href="http://english.pku.edu.cn/">Peking University</a>. So I drifted to Singapore and did my PhD at <a href="http://scse.ntu.edu.sg/Pages/Home.aspx">Nanyang Technological University</a>, co-advised by Prof. <a href="http://research.ntu.edu.sg/expertise/academicprofile/Pages/StaffProfile.aspx?ST_EMAILID=CAMBRIA&print=1">Erik Cambria</a> and Prof. <a href="http://mitsloan.mit.edu/faculty-and-research/faculty-directory/detail/?id=41041">Roy Welsch</a>. Today, I am Presidential Postdoctoral Fellow at Nanyang Technological University after one-year with the AIR Lab at <a href="http://www.continental-corporation.com/en">Continental</a>. I am of course, actively looking for a faculty position.</br></br>
 
-    My research interest spans <a href="https://en.wikipedia.org/wiki/Natural_language_processing">NLP</a>, <a href="http://web.stanford.edu/~jurafsky/slp3/4.pdf">Sentiment Analysis</a>, <a href="https://en.wikipedia.org/wiki/Business_intelligence">Business Intelligence</a>, and <a href="http://sentic.net/natural-language-based-financial-forecasting.pdf">AI empowered finance</a>.</p>
+    ※ My research interest spans <a href="https://en.wikipedia.org/wiki/Natural_language_processing">NLP</a>, <a href="http://web.stanford.edu/~jurafsky/slp3/4.pdf">Sentiment Analysis</a>, <a href="https://en.wikipedia.org/wiki/Business_intelligence">Business Intelligence</a>, and <a href="http://sentic.net/natural-language-based-financial-forecasting.pdf">AI empowered finance</a>.</p>
 
             <p onclick="collapse('ag')">※ Academic genealogy, a.k.a. how you do research [expand].<br />
                         <ul class="domtree" id="ag" style="display: none">
                             <li>
-                                Frank Xing
+                                Frank Xing (2019)
                                 <ul>
                                     <li>Erik Cambria (2011)
                                         <ul>
@@ -144,8 +197,7 @@ V23c0-1.104,0.896-2,2-2h28c1.104,0,2,0.896,2,2V41z"/></g></svg>
                         </ul>
             </p>
 
-            <p onclick="collapse('ar')">※ My Erdös number: 3 [expand].
-             <div id="ar" style="display: none">via Erik Cambria (2) — Giuseppe Melfi (1) — Paul Erdös (0)</div>
+            <p onclick="collapse('ar')">※ My Erdös number is <a href="http://www.csauthors.net/distance/frank-z-xing/paul-erdos">3</a> and Markowitz number is <a href="http://www.csauthors.net/distance/frank-z-xing/harry-m-markowitz">4</a>.
             </p>
 
             <h2 id="bio">Projects</h2>
@@ -169,7 +221,7 @@ V23c0-1.104,0.896-2,2-2h28c1.104,0,2,0.896,2,2V41z"/></g></svg>
                     <p>Estimating correlations between different stocks is an indispensable step under the the framework of modern portfolio theory. While the correlations induced from price data are unreliable, especially in high-dimensional space. This project seeks other sources of information, especially using NLP techniques, to facilitate robust and large-scale modeling of the dependence structure. The methods developed have great applicational potential for risk management.</p>
                      <ul style="list-style-type:square">
                       <li>Xing, F. Z.; Cambria, E.; Welsch, R. E. (2019). <a href="http://www.sciencedirect.com/science/article/abs/pii/S0950705118305872">Growing Semantic Vines for Robust Asset Allocation</a>. <i>Knowledge-Based Systems</i> 165 pp 297-305. <a href="http://github.com/senticnet/semantic-vine-growing">[code]</a></li>
-		      <li>Bai, H.; Xing, F. Z.; Cambria, E.; Huang, W.-B. (2019). <a href="http://aclweb.org/anthology/">Business taxonomy construction using concept-level hierarchical clustering</a>. <i>FinNLP</i>. <a href="http://github.com/SenticNet/neeq-annual-reports/">[data]</a></li>
+		      <li>Bai, H.; Xing, F. Z.; Cambria, E.; Huang, W.-B. (2019). <a href="http://aclweb.org/anthology/W19-5501">Business taxonomy construction using concept-level hierarchical clustering</a>. <i>FinNLP</i>. <a href="http://github.com/SenticNet/neeq-annual-reports/">[data]</a></li>
                     </ul>
                 </div>
                   <div class="item">
