--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@ V23c0-1.104,0.896-2,2-2h28c1.104,0,2,0.896,2,2V41z"/></g></svg>
                 <div class="item">
                     <h3>Intelligent Bayesian Asset Allocation</h3>
                     <img src="images/mktvw.png" style="float:left; margin: 0em 1em 0em 0em;" width="140px" height="140px"/>
-                    <p>The fast spread of information across social media have made managing global assets increasingly risky and challenging. Previous asset allocation methods mainly relied on the experience of financial experts, but ignored public opinions. Inspired by the idea of collective intelligence, this project leverages on sentic computing to monitor public moods, and further fuses the asset pricing model. Simulations suggest iBAA to be a powerful approach to investments.</p>
+                    <p>The fast spread of information across social media have made managing global assets increasingly risky and challenging. Classic asset allocation methods relied on financial experts' experience, but overlooked public opinions and sentiment. Inspired by the idea of collective intelligence, this project leverages on sentic computing to monitor public moods, and further fuses the asset pricing model. Simulations suggest iBAA to be a powerful approach to investment.</p>
                     <ul style="list-style-type:square">
                       <li>Xing, F. Z.; Cambria, E.; Zhang, Y. (2019). <a href="http://www.sciencedirect.com/science/article/abs/pii/S0950705119301546">Sentiment-Aware Volatility Forecasting</a>. <i>Knowledge-Based Systems</i> 176 pp 68-76.</li>
 		      <li>Xing, F. Z.; Cambria, E.; Welsch, R. E. (2018). <a href="http://sentic.net/market-sentiment-views.pdf">Intelligent Bayesian Asset Allocation via Market Sentiment Views</a>. <i>IEEE Computational Intelligence Magazine</i> 13(4) pp 25-34.</li>
@@ -195,18 +195,18 @@ V23c0-1.104,0.896-2,2-2h28c1.104,0,2,0.896,2,2V41z"/></g></svg>
                     </ul>
                 </div>
                 <div class="item">
-                    <h3>Stock Dependence Modeling</h3>
+                    <h3>Asset Dependence Modeling</h3>
                     <img src="images/gsv.png" style="float:left; margin: 0em 1em 0em 0em;" width="140px" height="140px"/>
-                    <p>Estimating correlations between different stocks is an indispensable step under the the framework of modern portfolio theory. While the correlations induced from price data are unreliable, especially in high-dimensional space. This project seeks other sources of information, especially using NLP techniques, to facilitate robust and large-scale modeling of the dependence structure. The methods developed have great applicational potential for risk management.</p>
+                    <p>Estimating correlations among different assets is an indispensable step under the the framework of modern portfolio theory. While the correlations induced from price data are unreliable, especially in high-dimensional space. This project seeks alternative sources of information using NLP techniques, to facilitate robust and large-scale modeling of the dependence structure. The methods developed have great applicational potential for portfolio risk management.</p>
                      <ul style="list-style-type:square">
                       <li>Xing, F. Z.; Cambria, E.; Welsch, R. E. (2019). <a href="http://www.sciencedirect.com/science/article/abs/pii/S0950705118305872">Growing Semantic Vines for Robust Asset Allocation</a>. <i>Knowledge-Based Systems</i> 165 pp 297-305. <a href="http://github.com/senticnet/semantic-vine-growing">[code]</a></li>
 		      <li>Bai, H.; Xing, F. Z.; Cambria, E.; Huang, W.-B. (2019). <a href="http://aclweb.org/anthology/W19-5501">Business taxonomy construction using concept-level hierarchical clustering</a>. <i>FinNLP</i>. <a href="http://github.com/SenticNet/neeq-annual-reports/">[data]</a></li>
                     </ul>
                 </div>
                   <div class="item">
-                    <h3>Financial Sentiment Knowledge Base </h3>
+                    <h3>Financial Knowledge Engineering </h3>
                     <img src="images/dalft.png" style="float:left; margin: 0em 1em 0em 0em;" width="140px" height="140px"/>
-                    <p>Language in financial domain is characterized by its frequent use of terminologies and commonsense knowledge. Numbers, time expressions, and arguments, which are trivial in general domain without context play an important role in understanding financial texts. This project combines the top-down ontology construction approach and bottom-up machine learning techniques to build a knowledge base for financial analysis and reasoning.</p>
+                    <p>Language in financial domain is characterized by its frequent use of jargons and commonsense knowledge. Numbers, time expressions, and arguments, which are trivial in general domain without context play an important role in understanding financial texts. This project combines the top-down ontology construction approach and bottom-up machine learning techniques to build a knowledge base for financial analysis and reasoning.</p>
                       <ul style="list-style-type:square">
                       <li>Xing, F. Z.; Pallucchini, F.; Cambria, E. (2019). <a href="http://doi.org/10.1016/j.ipm.2018.11.002">Cognitive-Inspired Domain Adaptation of Sentiment Lexicons</a>. <i>Information Processing & Management</i> 56(3) pp 554-564. <a href="http://github.com/fxing79/Cognitive-inspired-domain-adaptation">[code]</a></li>
                       <li>Xing, F. Z.; Cambria, E.; Welsch, R. E. (2018). <a href="https://link.springer.com/article/10.1007/s10462-017-9588-9">Natural Language based Financial Forecasting: A Survey</a>. <i>Artificial Intelligence Review</i> 50(1) pp 49–73.</li>
