--- a/index.html
+++ b/index.html
@@ -155,8 +155,6 @@ V23c0-1.104,0.896-2,2-2h28c1.104,0,2,0.896,2,2V41z"/></g></svg>
 		<h2 id="bio">Bio</h2>
 
 		<p>※ I spent my boyhood in <a href="http://en.wikipedia.org/wiki/Wuhan">Wuhan</a>, a punk metropolis in central China. But illumination seldom comes to my rescue and all the time seems lost in history before I moved to <a href="http://en.wikipedia.org/wiki/Beijing">Beijing</a> in 2011. However, my enthusiasm for exploring life in the ancient capital faded after I received my bachelor's degrees in Information Systems and Economics from <a href="http://english.pku.edu.cn/">Peking University</a>. So I drifted to Singapore and did my PhD at <a href="http://scse.ntu.edu.sg/Pages/Home.aspx">Nanyang Technological University</a>, co-advised by Prof. <a href="http://sentic.net/erikcambria/">Erik Cambria</a> and Prof. <a href="http://mitsloan.mit.edu/faculty-and-research/faculty-directory/detail/?id=41041">Roy Welsch</a>. After the one-year industrial experience with AIR Lab at <a href="http://www.continental-corporation.com/en">Continental</a>, I am Presidential Postdoctoral Fellow at Nanyang Technological University today, working with Prof. <a href="http://www.ntu.edu.sg/home/axsun/">Sun Aixin</a> and Prof. <a href="http://sentic.net/erikcambria/">Erik Cambria</a>.</br></br>
-    
-		※ I am of course, actively looking for a faculty position.</br></br>
 	
     		※ My research interest spans <a href="https://en.wikipedia.org/wiki/Natural_language_processing">NLP</a>, <a href="http://web.stanford.edu/~jurafsky/slp3/4.pdf">Sentiment Analysis</a>, <a href="https://en.wikipedia.org/wiki/Business_intelligence">Business Intelligence</a>, and <a href="http://sentic.net/natural-language-based-financial-forecasting.pdf">AI empowered finance</a>.</p>
 
@@ -180,6 +178,10 @@ V23c0-1.104,0.896-2,2-2h28c1.104,0,2,0.896,2,2V41z"/></g></svg>
 
             <p onclick="collapse('ar')">※ My Erdös number is <a href="http://www.csauthors.net/distance/frank-z-xing/paul-erdos">3</a> and Markowitz number is <a href="http://www.csauthors.net/distance/frank-z-xing/harry-m-markowitz">4</a>.
             </p>
+
+	<h2 id="bio">News</h2>
+	<p>※ I am actively looking for a faculty position.</br></br> 
+※ New book <a href="http://www.doi.org/10.1007/978-3-030-30263-4">Intelligent Asset Management"</a> available from <a href="https://www.amazon.com/Intelligent-Asset-Management-Socio-Affective-Computing-ebook-dp-B081J7K72X/dp/B081J7K72X/">Amazon</a>!</p>
 
             <h2 id="bio">Projects</h2>
 
