--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@ V23c0-1.104,0.896-2,2-2h28c1.104,0,2,0.896,2,2V41z"/></g></svg>
 
 	<h2 id="bio">News</h2>
 	<p>※ I am actively looking for a faculty position.</br></br> 
-※ New book <a href="http://www.doi.org/10.1007/978-3-030-30263-4">Intelligent Asset Management"</a> available from <a href="https://www.amazon.com/Intelligent-Asset-Management-Socio-Affective-Computing-ebook-dp-B081J7K72X/dp/B081J7K72X/">Amazon</a>!</p>
+※ New book <a href="http://www.doi.org/10.1007/978-3-030-30263-4">"Intelligent Asset Management"</a> available from <a href="https://www.amazon.com/Intelligent-Asset-Management-Socio-Affective-Computing-ebook-dp-B081J7K72X/dp/B081J7K72X/">Amazon.com</a>!</p>
 
             <h2 id="bio">Projects</h2>
 
